--- a/RouletteStrategy/RouletteStrategy.vcxproj.filters
+++ b/RouletteStrategy/RouletteStrategy.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Tests">
+      <UniqueIdentifier>{c387e9c8-d55f-40a6-929e-28e8e2d6a43c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -23,5 +26,16 @@
     <ClInclude Include="BruteOpt.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="Soaring-in.txt">
+      <Filter>Source Files\Tests</Filter>
+    </Text>
+    <Text Include="Soaring-out.txt">
+      <Filter>Source Files\Tests</Filter>
+    </Text>
+    <Text Include="Notes.txt">
+      <Filter>Source Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
