--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -121,6 +121,9 @@
     <Text Include="Soaring-in.txt" />
     <Text Include="Soaring-out.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Makefile" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
