Rewrote almost everything to get rid of class interdependencies. Hopefully the program will build now.

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -114,8 +114,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BruteOpt.h" />
+    <ClInclude Include="OptProcessor.h" />
     <ClInclude Include="ctpl_stl.h" />
+    <ClInclude Include="SharedParameters.h" />
+    <ClInclude Include="Solution.h" />
+    <ClInclude Include="StakeFinder.h" />
     <ClInclude Include="ThreadPool.h" />
   </ItemGroup>
   <ItemGroup>
