Contains code for partition method and for thread pool method. Could go either way from here, but heading back towards thread pool

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -115,6 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OptProcessor.h" />
+    <ClInclude Include="ctpl_stl.h" />
     <ClInclude Include="SharedParameters.h" />
     <ClInclude Include="Solution.h" />
     <ClInclude Include="StakeFinder.h" />
