--- a/RouletteStrategy/RouletteStrategy.vcxproj.filters
+++ b/RouletteStrategy/RouletteStrategy.vcxproj.filters
@@ -23,6 +23,9 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ctpl_stl.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
     <ClInclude Include="ThreadPool.h">
       <Filter>Source Files</Filter>
     </ClInclude>
