Check in before some big changes...

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -116,7 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="OptProcessor.h" />
+    <ClInclude Include="OutputTable.h" />
     <ClInclude Include="Simulator.h" />
+    <ClInclude Include="SolutionUtility.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Notes.txt" />
