Split code into some separate classes so it is easier to mange.

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -117,8 +117,8 @@
   <ItemGroup>
     <ClInclude Include="OptProcessor.h" />
     <ClInclude Include="OutputTable.h" />
+    <ClInclude Include="ProcessorCommons.h" />
     <ClInclude Include="Simulator.h" />
-    <ClInclude Include="SolutionUtility.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Notes.txt" />
