Split up code even further so it is more readable and manageable.

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -115,7 +115,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="OptProcessor.h" />
+    <ClInclude Include="OptController.h" />
+    <ClInclude Include="OptDescendingProcessor.h" />
+    <ClInclude Include="OptSumProcessor.h" />
     <ClInclude Include="OutputTable.h" />
     <ClInclude Include="ProcessorCommons.h" />
     <ClInclude Include="Simulator.h" />
