About halfway done with implementing multithreaded optimal solution finder with simulator.

--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <ClInclude Include="OptController.h" />
     <ClInclude Include="OptDescendingProcessor.h" />
+    <ClInclude Include="OptimalSimProcessor.h" />
     <ClInclude Include="OptSumProcessor.h" />
     <ClInclude Include="OutputTable.h" />
     <ClInclude Include="ProcessorCommons.h" />
