Finished coding a multithreaded solution finder using the simulator. Missing a couple ROI double checks, but should be good enough for quality output.

--- a/RouletteStrategy/RouletteStrategy.vcxproj.filters
+++ b/RouletteStrategy/RouletteStrategy.vcxproj.filters
@@ -60,5 +60,8 @@
     <ClInclude Include="OptimalSimProcessor.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="SimSolution.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
