--- a/RouletteStrategy/RouletteStrategy.vcxproj
+++ b/RouletteStrategy/RouletteStrategy.vcxproj
@@ -121,6 +121,7 @@
     <ClInclude Include="OptSumProcessor.h" />
     <ClInclude Include="OutputTable.h" />
     <ClInclude Include="ProcessorCommons.h" />
+    <ClInclude Include="SimSolution.h" />
     <ClInclude Include="Simulator.h" />
   </ItemGroup>
   <ItemGroup>
