The program now asks the user how many simulations to run for each potential solution. Only improvement at this point would be better multithreading.

--- a/RouletteStrategy/Makefile
+++ b/RouletteStrategy/Makefile
@@ -75,7 +75,7 @@ PARTIAL_SUBMITFILE = partialsubmit.tar.gz
 FULL_SUBMITFILE = fullsubmit.tar.gz
 
 #Default Flags
-CXXFLAGS = -std=c++14 -Wconversion -Wall -Werror -Wextra -pedantic 
+CXXFLAGS = -std=c++14 -Wconversion -Wall -Werror -Wextra -pedantic -pthread
 
 # make release - will compile "all" with $(CXXFLAGS) and the -O3 flag
 #				 also defines NDEBUG so that asserts will not check
